# xz-backdoor-github-analysis

./: Analysis.ipynb  LICENSE  README.md  pyproject.toml
data/: 2024-03-30-jait75.json
