[tool.poetry]
name = "xz-backdoor-github-analysis"
version = "0.1.0"
description = ""
authors = ["alden <17280789+ald3ns@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
matplotlib = "^3.8.3"
pandas = "^2.2.1"


[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
